# opendev

./: .env.keep  .gitignore  reflection.md  tasks.md  test.http
.vercel/: project.json
dev_proxy/: middleware.js  next.config.ts  package.json
dev_proxy/app/: globals.css  layout.js  page.js
dev_proxy/app/api/health/: route.js
dev_proxy/app/api/hello/: route.js
dev_proxy/app/api/models/: route.js
dev_proxy/app/api/openai/v1/chat/completions/: route.js
dev_proxy/config/: llm-providers.js
dev_proxy/lib/: logging.js  rust_logic_adapter.js  s.js  sign.mjs  stream-adapters.js
dev_proxy/tests/: package.json  stream_test.js
docs/archive/features/: dev-proxy-nextjs-bun-20250404.md
rust_proxy/: Cargo.toml  vercel.json
rust_proxy/.vercel/builders/: package.json
rust_proxy/src/: dev_client.rs  lib.rs  main.rs  sse_processor.rs  wasm_signer.rs
